3rd party libraries update
- Updated 3rd party libraries to their newest versions, resolves #40.

--- a/src/MvcTemplate.Objects/MvcTemplate.Objects.csproj
+++ b/src/MvcTemplate.Objects/MvcTemplate.Objects.csproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MvcTemplate.Components\MvcTemplate.Components.csproj" />
   </ItemGroup>
 
