--- a/src/MvcTemplate.Web/package.json
+++ b/src/MvcTemplate.Web/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@bevacqua/rome": "3.0.3",
+    "@fortawesome/fontawesome-free": "5.15.2",
+    "bootstrap": "4.6.0",
     "bootstrap.native": "3.0.14",
     "moment": "2.29.1",
     "wellidate": "2.2.0"
