3rd party libraries update
- Updated 3d party libraries to their newest versions.

--- a/src/MvcTemplate.Web/package.json
+++ b/src/MvcTemplate.Web/package.json
@@ -3,8 +3,8 @@
     "build": "node bundle.js"
   },
   "devDependencies": {
-    "esbuild": "^0.8.42",
-    "glob": "^7.1.6"
+    "esbuild": "0.8.45",
+    "glob": "7.1.6"
   },
   "dependencies": {
     "@bevacqua/rome": "3.0.3",
@@ -12,6 +12,6 @@
     "bootstrap": "4.6.0",
     "bootstrap.native": "3.0.14",
     "moment": "2.29.1",
-    "wellidate": "2.2.1"
+    "wellidate": "2.2.3"
   }
 }
