Configuration through environment
- Added support for changing application configuration through environment variables.

--- a/test/MvcTemplate.Tests/MvcTemplate.Tests.csproj
+++ b/test/MvcTemplate.Tests/MvcTemplate.Tests.csproj
@@ -14,6 +14,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="configuration.testing.json" CopyToOutputDirectory="Always" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="../../src/MvcTemplate.Web/MvcTemplate.Web.csproj" />
   </ItemGroup>
 
