Correct rename script
- Fixed, project renaming script not running at all.

--- a/tools/MvcTemplate.Rename/MvcTemplate.Rename.csproj
+++ b/tools/MvcTemplate.Rename/MvcTemplate.Rename.csproj
@@ -18,6 +18,10 @@
     <PackageReference Include="BCrypt.Net-Core" Version="1.6.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Using Include="System.Text.RegularExpressions" />
+  </ItemGroup>
+
   <ItemGroup Condition="'$(Configuration)'=='Release'">
     <SourceRoot Remove="$(NugetPackageRoot)" />
     <SourceRoot Include="$(ProjectDir)" />
