Template mail removal
- Removed template mail from configuration, because it's not replaced by renaming procedure.

--- a/src/MvcTemplate.Web/configuration.json
+++ b/src/MvcTemplate.Web/configuration.json
@@ -28,7 +28,7 @@
         "Port": 587,
         "EnableSsl": true,
         "Host": "smtp.gmail.com",
-        "Sender": "MVC.Template@gmail.com",
+        "Sender": "change-it@gmail.com",
         "Password": "ChangeIt"
     },
     "SiteMap": {
